# expenzo

./: .coverage  .gitignore  Makefile  README.md  build.sh  db.sqlite3  expenses.json  import_data.py  manage.py  new_expenses.csv  pyproject.toml  requirements.txt  test_expenses.csv  test_json_expenses.json
expenzo/: asgi.py  settings.py  urls.py  views.py  wsgi.py
expenzo/analytics/: apps.py  test_analytics.py  views.py
expenzo/categories/: apps.py  forms.py  models.py  test_categories.py  urls.py  views.py
expenzo/categories/migrations/: 0001_initial.py  0002_rename_categories_category.py  0003_category_description_category_user_and_more.py  0004_alter_category_options_alter_category_name_and_more.py
expenzo/core/: apps.py  mixins.py
expenzo/expenses/: admin.py  api_views.py  apps.py  filters.py  forms.py  models.py  test_expenses.py  urls.py  views.py
expenzo/expenses/migrations/: 0001_initial.py  0002_initial.py
expenzo/sections/: apps.py  forms.py  models.py  test_sections.py  urls.py  views.py
expenzo/templates/: base.html  index.html
expenzo/users/: apps.py  forms.py  models.py  urls.py  views.py
tengecash/: asgi.py  bot.py  settings.py  urls.py  wsgi.py
tengecash/analytics/: apps.py  test_analytics.py  views.py
tengecash/categories/: apps.py  test_categories.py  urls.py  views.py
tengecash/core/: apps.py
tengecash/expenses/: admin.py  apps.py  filters.py  models.py  test_expenses.py  views.py
tengecash/sections/: apps.py  test_sections.py  views.py
tengecash/templates/: base.html  index.html
tengecash/users/: apps.py  models.py
(+32 files in other folders)
