[project]
name = "expenzo"
version = "0.1.0"
description = "Personal finance tracker build with Django"
authors = [
    { name="Rustem Yeldessov", email="eldesov1997@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "dj-database-url>=3.0.1",
    "django-bootstrap5==24.3",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "rollbar>=1.3.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.2",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expenzo"]